kubecost-cel/require-kubecost-labels/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: require-kubecost-labels
policies:
- ../require-kubecost-labels.yaml
resources:
- resource.yaml
results:
- kind: Pod
  policy: require-kubecost-labels
  resources:
  - badpod01
  - badpod02
  - badpod03
  - badpod04
  - badpod05
  result: fail
  rule: require-labels
- kind: Pod
  policy: require-kubecost-labels
  resources:
  - goodpod
  result: pass
  rule: require-labels
